# PyRockWave

./: .gitignore  CITATION.cff  README.md  STRUCTURE.md  index.html  pixi.toml  pyproject.toml
notebooks/: ElasticTensor_explained.ipynb  example_christoffel.ipynb  example_coordinates.ipynb  example_database.ipynb  example_tensor_tools2.ipynb  test_Averaging_schemes.ipynb  test_Dataclasses.ipynb  test_christoffel_GaAs.ipynb  test_christoffel_stepbystep.ipynb  test_reflectivity_vs_graebner.ipynb  test_rotation2.ipynb
notebooks/other_tests/: test_rotation.m
src/: Dataclasses.py  ElasticClass.py  ElasticTensor_class.py  ElasticTensor_explained.ipynb  Mao_fitting.ipynb  anisotropic_models.py  averaging_schemes.py  christoffel.py  christoffel_old.py  christoffel_step_by_step.ipynb  coordinates.py  custom_plots.py  database.py  decompose.py  density_derivatives.py  elastic_database.py  elastic_derivatives.py  example_ElasticTensor.ipynb  example_anisotropic_models.ipynb  example_christoffel.ipynb  example_coordinates.ipynb  example_database.ipynb  example_orthotropic.ipynb  example_polar.ipynb  example_seismicTools.ipynb  example_tensor_tools.ipynb  layered_media.py  orthotropic_models.py  polar_models.py  pressure_derivatives.py  seismic_tools.py  tensor_tools.py  test_Christoffel_MTEX.m  test_Dataclasses.ipynb  test_RTclass.ipynb  test_christoffel.ipynb  test_christoffel_stepbystep.ipynb  test_christoffel_stepbystep_olivine.ipynb  test_decompose.ipynb  test_layered_media.ipynb  (+5 more)
src/old code/: decompose.py
src/pyrockwave/: __init__.py  anisotropic_models.py  averaging_schemes.py  christoffel.py  decomposition.py  elastic_tensor.py  layered_media.py  ultrasonic.py
src/pyrockwave/plotting/: __init__.py  plots.py
src/pyrockwave/utils/: __init__.py  coordinates.py  tensor_tools.py
tests/: test_anisotropic_models.py  test_averaging_schemes.py  test_backus_average.py  test_christoffel.py  test_coordinates.py  test_decomposition.py  test_elastic_tensor.py  test_plots.py  test_reflectivity_vs_graebner.py  test_tensor_tools.py  test_ultrasonic_bandpass.py  test_validation.py  test_zoeppritz_reflectivity.py
