[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrockwave"
dynamic = ["version"]
description = "A Python tool for modelling the elastic and seismic properties of Earth materials."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Marco A. Lopez-Sanchez", email = "marco.lopez@csic.es" },
]
keywords = [
    "geophysics",
    "seismology",
    "elasticity",
    "anisotropy",
    "petrophysics",
    "rock physics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.urls]
Homepage = "https://marcoalopez.github.io/PyRockWave/"
Repository = "https://github.com/marcoalopez/PyRockWave"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyrockwave*"]

[tool.setuptools.dynamic]
version = { attr = "pyrockwave.__version__" }
