[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrockwave"
dynamic = ["version"]
description = "A Python tool for modelling the elastic and seismic properties of Earth materials."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Marco A. Lopez-Sanchez", email = "marcoalopez@protonmail.com" },
]
keywords = [
    "geophysics",
    "seismology",
    "elasticity",
    "anisotropy",
    "petrophysics",
    "rock physics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
]

[project.urls]
Homepage = "https://marcoalopez.github.io/PyRockWave/"
Repository = "https://github.com/marcoalopez/PyRockWave"
Issues = "https://github.com/marcoalopez/PyRockWave/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyrockwave*"]

[tool.setuptools.dynamic]
version = { attr = "pyrockwave.__version__" }
